integration-tests/tests/integration/snapshots/integration__record_replay__store_list_all_non_replayable.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&list_str, temp_root)"
---
2 recorded runs:

  83000002  XXXX-XX-XX XX:XX:XX  <duration>     <size>  1 passed  (not replayable)  *latest
  83000001  XXXX-XX-XX XX:XX:XX  <duration>     <size>  1 passed  (not replayable)
                                             ─────────
                                                <size>
