integration-tests/tests/integration/snapshots/integration__record_replay__store_list_empty.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&list_empty.stdout_as_str(), temp_root)"
---
