integration-tests/tests/integration/snapshots/integration__record_replay__store_list_latest_based_on_time.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&list_str_after, temp_root)"
---
2 recorded runs:

  82000002  XXXX-XX-XX XX:XX:XX  <duration>     <size>  1 passed  (not replayable)  *latest
  82000001  XXXX-XX-XX XX:XX:XX  <duration>     <size>  1 passed
                                             ─────────
                                                <size>
