integration-tests/tests/integration/snapshots/integration__record_replay__store_list_latest_skips_non_replayable.snap
---
source: integration-tests/tests/integration/record_replay.rs
assertion_line: 1268
expression: "redact_dynamic_fields(&list_str_after, temp_root)"
---
2 recorded runs:

  82000002  XXXX-XX-XX XX:XX:XX  <duration>     <size>  1 passed  (not replayable)
  82000001  XXXX-XX-XX XX:XX:XX  <duration>     <size>  1 passed  *latest
                                             ─────────
                                                <size>
