integration-tests/tests/integration/snapshots/integration__record_replay__store_list_multiple_runs.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&list_output.stdout_as_str(), temp_root)"
---
3 recorded runs:

  50000003  XXXX-XX-XX XX:XX:XX  <duration>     <size>  2 passed  *latest
  50000002  XXXX-XX-XX XX:XX:XX  <duration>     <size>  1 passed
  50000001  XXXX-XX-XX XX:XX:XX  <duration>     <size>  1 passed
                                             ─────────
                                                <size>
