integration-tests/tests/integration/snapshots/integration__record_replay__store_list_no_replayable_runs_store_zip.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: list_str
---
1 recorded run:

  80000001  XXXX-XX-XX XX:XX:XX  <duration>     <size>  1 passed  (not replayable)  *latest
                                             ─────────
                                                <size>
