integration-tests/tests/integration/snapshots/integration__record_replay__store_list_rerun_chain_tree.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: list_output.stdout_as_str()
---
3 recorded runs:

  94000001    XXXX-XX-XX XX:XX:XX  <duration>     <size>  23 passed / 10 failed
  └─94000002  XXXX-XX-XX XX:XX:XX  <duration>     <size>   0 passed / 10 failed
    94000003  XXXX-XX-XX XX:XX:XX  <duration>     <size>   0 passed / 10 failed  *latest
                                               ─────────
                                                  <size>
