integration-tests/tests/integration/snapshots/integration__record_replay__store_list_single_run.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&list_output.stdout_as_str(), temp_root)"
---
1 recorded run:

  10000001  XXXX-XX-XX XX:XX:XX  <duration>     <size>  23 passed / 10 failed  *latest
                                             ─────────
                                                <size>
