integration-tests/tests/integration/snapshots/integration__record_replay__store_list_stress_run.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&list_output.stdout_as_str(), temp_root)"
snapshot_kind: text
---
1 recorded run:

  60000001  [TIMESTAMP]  [DURATION]  [SIZE]  5 passed iterations
  ──────
  [SIZE]
