integration-tests/tests/integration/snapshots/integration__record_replay__store_list_verbose_empty.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&list_verbose_empty.stdout_as_str(), temp_root)"
snapshot_kind: text
---
store: [TEMP_DIR]
